testsuite/tests/checks/volatile_objects/test.out
foo.ads:7:4: error: volatile_objects_without_address_clauses - rule violation
7 |    Variable1: Interfaces.Unsigned_8                                --  FLAG
  |    ^^^^^^^^^ 

foo.ads:12:4: error: volatile_objects_without_address_clauses - rule violation
12 |    Variable3 : My_Int;                                             --  FLAG
   |    ^^^^^^^^^ 

